--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Good Things</title>
+    <title>Why Life Is Beautiful</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="A personal compilation of good sensory things in life.">
+    <meta name="description" content="A compilation of beautiful things in life for myself to look at when I'm suicidal.">
     <meta name="robots" content="index, follow">
 
     <link rel="icon" href="/assets/images/favicon-16.png" sizes="16x16" type="image/png">
@@ -25,141 +25,141 @@
   <body data-new-gr-c-s-check-loaded="14.1142.0" data-gr-ext-installed="">
 
     <header class="site-header" role="banner">
-      <h1 class="site-header__title"><span class="site-header__good">Good</span> Things</h1>
-      <p class="site-header__subtitle">A personal compilation of good sensory things in life.</p>
+      <h1 class="site-header__title"><span class="site-header__good">Beautiful</span> Things</h1>
+      <p class="site-header__subtitle">A compilation of beautiful things in life for myself to look at when I'm suicidal.</p>
     </header>
 
     <main role="main">
       
 <ul role="list" class="things-list">
   
-    <li role="listitem" class="things-list__item">The beach at night.</li>
+    <li role="listitem" class="things-list__item">Sepnding time with family and friends.</li>
   
-    <li role="listitem" class="things-list__item">Petrechor.</li>
+    <li role="listitem" class="things-list__item">Building and maintaining meaningful connections.</li>
   
-    <li role="listitem" class="things-list__item">Tidepool critters.</li>
+    <li role="listitem" class="things-list__item">Romantic relationships.</li>
   
-    <li role="listitem" class="things-list__item">An avocado that is ripe is exactly when you feel like eating an avocado.</li>
+    <li role="listitem" class="things-list__item">Accomplishing goals, big or samll.</li>
   
-    <li role="listitem" class="things-list__item">Fancy butter.</li>
+    <li role="listitem" class="things-list__item">Overcoming challenges and obstacles.</li>
   
-    <li role="listitem" class="things-list__item">The first foggy fall day.</li>
+    <li role="listitem" class="things-list__item">Recognizing personal growth.</li>
   
-    <li role="listitem" class="things-list__item">The scent of chimney smoke in crisp winter air.</li>
+    <li role="listitem" class="things-list__item">Engaging in musical activities.</li>
   
-    <li role="listitem" class="things-list__item">Turtles drifting around in a pond.</li>
+    <li role="listitem" class="things-list__item">Pursuing hobbies in writing, playing music, reading, and tennis.</li>
   
-    <li role="listitem" class="things-list__item">Family game nights.</li>
+    <li role="listitem" class="things-list__item">Enjoying the beauty of nature.</li>
   
-    <li role="listitem" class="things-list__item">All dogs.</li>
+    <li role="listitem" class="things-list__item">Outdoor activites like hiking, biking, or simply taking a walk.</li>
   
-    <li role="listitem" class="things-list__item">Catching sight of a smoll bird at someone’s feeder.</li>
+    <li role="listitem" class="things-list__item">Regular exercise and physical activity.</li>
   
-    <li role="listitem" class="things-list__item">Ferns.</li>
+    <li role="listitem" class="things-list__item">Healthy eating habits</li>
   
-    <li role="listitem" class="things-list__item">A long walk on a summer evening.</li>
+    <li role="listitem" class="things-list__item">Getting enough sleep.</li>
   
-    <li role="listitem" class="things-list__item">Porch hammocks.</li>
+    <li role="listitem" class="things-list__item">Meditation and mindfulness practices.</li>
   
-    <li role="listitem" class="things-list__item">“Screw it, I’ll just walk”.</li>
+    <li role="listitem" class="things-list__item">“Relaxing activities like taking a bath.</li>
   
-    <li role="listitem" class="things-list__item">Tiny sprouts, grown from seed.</li>
+    <li role="listitem" class="things-list__item">Reflecting on and appreciating the positive aspects of life.</li>
   
-    <li role="listitem" class="things-list__item">A clean home after returning from travel.</li>
+    <li role="listitem" class="things-list__item">Keeping a gratitude journal.</li>
   
-    <li role="listitem" class="things-list__item">A candle on a long winter night.</li>
+    <li role="listitem" class="things-list__item">Acquiring new skills and knowledge.</li>
   
-    <li role="listitem" class="things-list__item">That fall chimney smell.</li>
+    <li role="listitem" class="things-list__item">Personal development and self-improvement.</li>
   
-    <li role="listitem" class="things-list__item">Walking past a rosemary bush, touching a sprig, and smelling your fingers.</li>
+    <li role="listitem" class="things-list__item">Helping others and contributing to the community.</li>
   
-    <li role="listitem" class="things-list__item">A breeze blowing in from the sea.</li>
+    <li role="listitem" class="things-list__item">Volunteering and philanthropy.</li>
   
-    <li role="listitem" class="things-list__item">Being awake while the whole world is asleep.</li>
+    <li role="listitem" class="things-list__item">Exploring new places and experiencing different cultures.</li>
   
-    <li role="listitem" class="things-list__item">Bookstore cats.</li>
+    <li role="listitem" class="things-list__item">Going on adventures and trying new things.</li>
   
-    <li role="listitem" class="things-list__item">Golden hour light.</li>
+    <li role="listitem" class="things-list__item">Expressing myself through art, writing, or other creative outlets.</li>
   
-    <li role="listitem" class="things-list__item">Swimming in a crisp lake.</li>
+    <li role="listitem" class="things-list__item">Enjoying and appreciating various forms of art.</li>
   
-    <li role="listitem" class="things-list__item">New book smell.</li>
+    <li role="listitem" class="things-list__item">Watching funny movies or shows.</li>
   
-    <li role="listitem" class="things-list__item">A soft night rain.</li>
+    <li role="listitem" class="things-list__item">Sharing jokes and laughter with others.</li>
   
-    <li role="listitem" class="things-list__item">A good kitchen knife.</li>
+    <li role="listitem" class="things-list__item">Listening to music that brings joy.</li>
   
-    <li role="listitem" class="things-list__item">A lazy afternoon in a friend’s sun-drenched backyard.</li>
+    <li role="listitem" class="things-list__item">Watching movies, shows, or attending live performances.</li>
   
-    <li role="listitem" class="things-list__item">The neighborhood bursting with blossoms in spring.</li>
+    <li role="listitem" class="things-list__item">Spending time with animals and pets.</li>
   
-    <li role="listitem" class="things-list__item">Heavy cherry blossoms.</li>
+    <li role="listitem" class="things-list__item">Building a connection with a furry friend.</li>
   
-    <li role="listitem" class="things-list__item">Front-yard gardens.</li>
+    <li role="listitem" class="things-list__item">Positive thinking and cultivatin a positive mindset.</li>
   
-    <li role="listitem" class="things-list__item">Girl Scout cookie season.</li>
+    <li role="listitem" class="things-list__item">Taking time for self-reflection.</li>
   
-    <li role="listitem" class="things-list__item">Meditating with friends in a temple in Kyoto.</li>
+  <li role="listitem" class="things-list__item">Balancing work and personal life.</li>
   
-    <li role="listitem" class="things-list__item">An intense aroma of pine.</li>
+    <li role="listitem" class="things-list__item">Finding a harmony between various aspects of life.</li>
   
-    <li role="listitem" class="things-list__item">Bringing someone a surprise treat from the store.</li>
+    <li role="listitem" class="things-list__item">Spending quality time with loved ones.</li>
   
-    <li role="listitem" class="things-list__item">Lovely scents from an indoor citrus tree in bloom.</li>
+    <li role="listitem" class="things-list__item">Creating memorable experiences with friends and family.</li>
   
-    <li role="listitem" class="things-list__item">A loved one waiting at the airport.</li>
+    <li role="listitem" class="things-list__item">Celebrating achievements, both big and small.</li>
   
-    <li role="listitem" class="things-list__item">Cooking—providing sustenance for the body of someone you love.</li>
+    <li role="listitem" class="things-list__item">Acknowledging and rewarding myself for accomplishments.</li>
   
-    <li role="listitem" class="things-list__item">People watching from a little cafe.</li>
+    <li role="listitem" class="things-list__item">Being open to change and adaptation.</li>
   
-    <li role="listitem" class="things-list__item">Live music.</li>
+    <li role="listitem" class="things-list__item">Embracing new opportunities and experiences.</li>
   
-    <li role="listitem" class="things-list__item">Earthworms after a rain.</li>
+    <li role="listitem" class="things-list__item">Trying new foods and cuisines.</li>
   
-    <li role="listitem" class="things-list__item">Holiday markets and mulled wine.</li>
+    <li role="listitem" class="things-list__item">Cooking or baking as a creative and enjoyable activity.</li>
   
-    <li role="listitem" class="things-list__item">Lightning bugs.</li>
+    <li role="listitem" class="things-list__item">Attending cultural events, museums, or art galleries.</li>
   
-    <li role="listitem" class="things-list__item">Heavy snow on the mountains.</li>
+    <li role="listitem" class="things-list__item">Exploring and learning about different cultures.</li>
   
-    <li role="listitem" class="things-list__item">Inquisitive birds on the window sill.</li>
+    <li role="listitem" class="things-list__item">Keeping up with favorite TV shows, movies, or books.</li>
   
-    <li role="listitem" class="things-list__item">A giant tub of homemade Chex Mix.</li>
+    <li role="listitem" class="things-list__item">Exploring and enjoying technological advancements.</li>
   
-    <li role="listitem" class="things-list__item">Rain on the roof.</li>
+    <li role="listitem" class="things-list__item">Engaging in acts of kindness and generosity.</li>
   
-    <li role="listitem" class="things-list__item">That all the animals in the sea are still in there doing their thing, all the time.</li>
+    <li role="listitem" class="things-list__item">Contributing to charitable causes and making a positive impact.</li>
   
-    <li role="listitem" class="things-list__item">Catching the bus or train just in time.</li>
+    <li role="listitem" class="things-list__item">Taking calculated risks and stepping out of my comfort zone.</li>
   
-    <li role="listitem" class="things-list__item">A sunny brunch.</li>
+    <li role="listitem" class="things-list__item">Seeking adventure and excitement in life.</li>
   
-    <li role="listitem" class="things-list__item">Surprise ladybugs.</li>
+    <li role="listitem" class="things-list__item">Exploring and deepening spiritual beliefs.</li>
   
-    <li role="listitem" class="things-list__item">The lacy bits on the edge of a fried egg.</li>
+    <li role="listitem" class="things-list__item">Finding inner peace through practices like meditation or prayer.</li>
   
-    <li role="listitem" class="things-list__item">Nice clean sheets.</li>
+    <li role="listitem" class="things-list__item">Viewing challenges as opportunities for growth.</li>
   
-    <li role="listitem" class="things-list__item">Thunderstorms while tucked into bed.</li>
+    <li role="listitem" class="things-list__item">Learning resilience and coping skills.</li>
   
-    <li role="listitem" class="things-list__item">An object made with love.</li>
+    <li role="listitem" class="things-list__item">Surrounding myself with positive and supportive people.</li>
   
-    <li role="listitem" class="things-list__item">Spotting an unexpected animal.</li>
+    <li role="listitem" class="things-list__item">Cultivating healthy and fulfilling relationships.</li>
   
-    <li role="listitem" class="things-list__item">Old book smell.</li>
+    <li role="listitem" class="things-list__item">Appreicating beauty in art, nature, and everyday life.</li>
   
-    <li role="listitem" class="things-list__item">The first sunny weekend after a long winter.</li>
+    <li role="listitem" class="things-list__item">Surrounding myself with aesthetically pleasing environments.</li>
   
-    <li role="listitem" class="things-list__item">The first sign of shorter nights.</li>
+    <li role="listitem" class="things-list__item">Finding joy in simplicity and minimalistic living.</li>
   
-    <li role="listitem" class="things-list__item">Ripe, in-season fruit.</li>
+    <li role="listitem" class="things-list__item">Decluttering and organizing spaces.</li>
   
 </ul>
     </main>
 
     <footer class="site-footer" role="contentinfo">
-      <p>Compiled by <a href="http://melanie-richards.com">Melanie Richards</a> — <a href="https://github.com/melanierichards/good-things">Explore the code</a></p>
+      <p>Compiled by <a href="http://melanie-richards.com">Connie Zhang</a> — <a href="https://github.com/melanierichards/good-things">Explore the code</a></p>
     </footer>
 </body>
   <grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
