--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </main>
 
     <footer class="site-footer" role="contentinfo">
-      <p>Compiled by <a href="http://melanie-richards.com">Connie Zhang</a> — <a href="https://github.com/melanierichards/good-things">Explore the code</a></p>
+      <p>Compiled by <a href="https://www.instagram.com/__conniez/">Connie Zhang</a></p>
     </footer>
 </body>
   <grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
