--- a/index.html
+++ b/index.html
@@ -1,166 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Why Life Is Beautiful</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width">
-    <meta name="description" content="A compilation of beautiful things in life for myself to look at when I'm suicidal.">
-    <meta name="robots" content="index, follow">
+<head>
+  <title>Why Life Is Beautiful</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width">
+  <meta name="description" content="A compilation of beautiful things in life for myself to look at when I'm feeling down.">
+  <meta name="robots" content="index, follow">
 
-    <link rel="icon" href="/assets/images/favicon-16.png" sizes="16x16" type="image/png">
-    <link rel="icon" href="/assets/images/favicon-32.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="/assets/images/favicon-48.png" sizes="48x48" type="image/png">
-    <link rel="icon" href="/assets/images/favicon-62.png" sizes="62x62" type="image/png">
-    <link rel="icon" href="/assets/images/favicon-192.png" sizes="192x192" type="image/png">
+  <link rel="icon" href="/assets/images/favicon-16.png" sizes="16x16" type="image/png">
+  <link rel="icon" href="/assets/images/favicon-32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="/assets/images/favicon-48.png" sizes="48x48" type="image/png">
+  <link rel="icon" href="/assets/images/favicon-62.png" sizes="62x62" type="image/png">
+  <link rel="icon" href="/assets/images/favicon-192.png" sizes="192x192" type="image/png">
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:creator" content="@soMelanieSaid">
-    <meta name="twitter:title" content="Good Things">
-    <meta name="twitter:description" content="A personal compilation of good sensory things in life.">
-    <meta name="twitter:image:src" content="https://goodthings.melanie-richards.com/assets/images/social-media-card.png">
-      
-    <link rel="stylesheet" href="/assets/css/style.css">
-  </head>
-  <body data-new-gr-c-s-check-loaded="14.1142.0" data-gr-ext-installed="">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:creator" content="@soMelanieSaid">
+  <meta name="twitter:title" content="Good Things">
+  <meta name="twitter:description" content="A personal compilation of good sensory things in life.">
+  <meta name="twitter:image:src" content="https://goodthings.melanie-richards.com/assets/images/social-media-card.png">
 
-    <header class="site-header" role="banner">
-      <h1 class="site-header__title"><span class="site-header__good">Beautiful</span> Things</h1>
-      <p class="site-header__subtitle">A compilation of beautiful things in life for myself to look at when I'm suicidal.</p>
-    </header>
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <style>
+    body {
+      font-family: "Dancing Script", cursive;
+      background-color: #fdf5e6; 
+      color: #663399; 
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+    }
 
-    <main role="main">
-      
-<ul role="list" class="things-list">
-  
-    <li role="listitem" class="things-list__item">Sepnding time with family and friends.</li>
-  
-    <li role="listitem" class="things-list__item">Building and maintaining meaningful connections.</li>
-  
-    <li role="listitem" class="things-list__item">Romantic relationships.</li>
-  
-    <li role="listitem" class="things-list__item">Accomplishing goals, big or samll.</li>
-  
-    <li role="listitem" class="things-list__item">Overcoming challenges and obstacles.</li>
-  
-    <li role="listitem" class="things-list__item">Recognizing personal growth.</li>
-  
-    <li role="listitem" class="things-list__item">Engaging in musical activities.</li>
-  
-    <li role="listitem" class="things-list__item">Pursuing hobbies in writing, playing music, reading, and tennis.</li>
-  
-    <li role="listitem" class="things-list__item">Enjoying the beauty of nature.</li>
-  
-    <li role="listitem" class="things-list__item">Outdoor activites like hiking, biking, or simply taking a walk.</li>
-  
-    <li role="listitem" class="things-list__item">Regular exercise and physical activity.</li>
-  
-    <li role="listitem" class="things-list__item">Healthy eating habits</li>
-  
-    <li role="listitem" class="things-list__item">Getting enough sleep.</li>
-  
-    <li role="listitem" class="things-list__item">Meditation and mindfulness practices.</li>
-  
-    <li role="listitem" class="things-list__item">“Relaxing activities like taking a bath.</li>
-  
-    <li role="listitem" class="things-list__item">Reflecting on and appreciating the positive aspects of life.</li>
-  
-    <li role="listitem" class="things-list__item">Keeping a gratitude journal.</li>
-  
-    <li role="listitem" class="things-list__item">Acquiring new skills and knowledge.</li>
-  
-    <li role="listitem" class="things-list__item">Personal development and self-improvement.</li>
-  
-    <li role="listitem" class="things-list__item">Helping others and contributing to the community.</li>
-  
-    <li role="listitem" class="things-list__item">Volunteering and philanthropy.</li>
-  
-    <li role="listitem" class="things-list__item">Exploring new places and experiencing different cultures.</li>
-  
-    <li role="listitem" class="things-list__item">Going on adventures and trying new things.</li>
-  
-    <li role="listitem" class="things-list__item">Expressing myself through art, writing, or other creative outlets.</li>
-  
-    <li role="listitem" class="things-list__item">Enjoying and appreciating various forms of art.</li>
-  
-    <li role="listitem" class="things-list__item">Watching funny movies or shows.</li>
-  
-    <li role="listitem" class="things-list__item">Sharing jokes and laughter with others.</li>
-  
-    <li role="listitem" class="things-list__item">Listening to music that brings joy.</li>
-  
-    <li role="listitem" class="things-list__item">Watching movies, shows, or attending live performances.</li>
-  
-    <li role="listitem" class="things-list__item">Spending time with animals and pets.</li>
-  
-    <li role="listitem" class="things-list__item">Building a connection with a furry friend.</li>
-  
-    <li role="listitem" class="things-list__item">Positive thinking and cultivatin a positive mindset.</li>
-  
-    <li role="listitem" class="things-list__item">Taking time for self-reflection.</li>
-  
-  <li role="listitem" class="things-list__item">Balancing work and personal life.</li>
-  
-    <li role="listitem" class="things-list__item">Finding a harmony between various aspects of life.</li>
-  
-    <li role="listitem" class="things-list__item">Spending quality time with loved ones.</li>
-  
-    <li role="listitem" class="things-list__item">Creating memorable experiences with friends and family.</li>
-  
-    <li role="listitem" class="things-list__item">Celebrating achievements, both big and small.</li>
-  
-    <li role="listitem" class="things-list__item">Acknowledging and rewarding myself for accomplishments.</li>
-  
-    <li role="listitem" class="things-list__item">Being open to change and adaptation.</li>
-  
-    <li role="listitem" class="things-list__item">Embracing new opportunities and experiences.</li>
-  
-    <li role="listitem" class="things-list__item">Trying new foods and cuisines.</li>
-  
-    <li role="listitem" class="things-list__item">Cooking or baking as a creative and enjoyable activity.</li>
-  
-    <li role="listitem" class="things-list__item">Attending cultural events, museums, or art galleries.</li>
-  
-    <li role="listitem" class="things-list__item">Exploring and learning about different cultures.</li>
-  
-    <li role="listitem" class="things-list__item">Keeping up with favorite TV shows, movies, or books.</li>
-  
-    <li role="listitem" class="things-list__item">Exploring and enjoying technological advancements.</li>
-  
-    <li role="listitem" class="things-list__item">Engaging in acts of kindness and generosity.</li>
-  
-    <li role="listitem" class="things-list__item">Contributing to charitable causes and making a positive impact.</li>
-  
-    <li role="listitem" class="things-list__item">Taking calculated risks and stepping out of my comfort zone.</li>
-  
-    <li role="listitem" class="things-list__item">Seeking adventure and excitement in life.</li>
-  
-    <li role="listitem" class="things-list__item">Exploring and deepening spiritual beliefs.</li>
-  
-    <li role="listitem" class="things-list__item">Finding inner peace through practices like meditation or prayer.</li>
-  
-    <li role="listitem" class="things-list__item">Viewing challenges as opportunities for growth.</li>
-  
-    <li role="listitem" class="things-list__item">Learning resilience and coping skills.</li>
-  
-    <li role="listitem" class="things-list__item">Surrounding myself with positive and supportive people.</li>
-  
-    <li role="listitem" class="things-list__item">Cultivating healthy and fulfilling relationships.</li>
-  
-    <li role="listitem" class="things-list__item">Appreicating beauty in art, nature, and everyday life.</li>
-  
-    <li role="listitem" class="things-list__item">Surrounding myself with aesthetically pleasing environments.</li>
-  
-    <li role="listitem" class="things-list__item">Finding joy in simplicity and minimalistic living.</li>
-  
-    <li role="listitem" class="things-list__item">Decluttering and organizing spaces.</li>
-  
-</ul>
-    </main>
+    header.site-header {
+      background-color: #ffcccb; 
+      padding: 20px;
+      text-align: center;
+    }
 
-    <footer class="site-footer" role="contentinfo">
-      <p>Compiled by <a href="https://www.instagram.com/__conniez/">Connie Zhang</a></p>
-    </footer>
+    h1.site-header__title {
+      font-size: 2.5em;
+      color: #800080; 
+      margin-bottom: 10px;
+    }
+
+    p.site-header__subtitle {
+      font-size: 1.2em;
+      color: #800080;
+    }
+
+    main {
+      padding: 20px;
+    }
+
+    ul.things-list {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    li.things-list__item {
+      background-color: #ffebcd; 
+      margin: 10px 0;
+      padding: 10px;
+      border-radius: 5px;
+    }
+
+    footer.site-footer {
+      background-color: #ffcccb;
+      padding: 10px;
+      text-align: center;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+
+    footer.site-footer a {
+      color: #800080;
+      text-decoration: underline;
+    }
+  </style>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat&display=swap">
+</head>
+
+<body>
+  <header class="site-header" alt="banner">
+    <h1 class="site-header__title"><span class="site-header__good">Beautiful</span> Things</h1>
+    <p class="site-header__subtitle">A compilation of beautiful things in life for myself to look at when I'm feeling down.</p>
+  </header>
+
+  <main alt="main">
+    <ul alt="list" class="things-list">
+      <li alt="listitem" class="things-list__item">Sepnding time with family and friends.</li>
+  
+    <li alt="listitem" class="things-list__item">Building and maintaining meaningful connections.</li>
+  
+    <li alt="listitem" class="things-list__item">Romantic relationships.</li>
+  
+    <li alt="listitem" class="things-list__item">Accomplishing goals, big or samll.</li>
+  
+    <li alt="listitem" class="things-list__item">Overcoming challenges and obstacles.</li>
+  
+    <li alt="listitem" class="things-list__item">Recognizing personal growth.</li>
+  
+    <li alt="listitem" class="things-list__item">Engaging in musical activities.</li>
+  
+    <li alt="listitem" class="things-list__item">Pursuing hobbies in writing, playing music, reading, and tennis.</li>
+  
+    <li alt="listitem" class="things-list__item">Enjoying the beauty of nature.</li>
+  
+    <li alt="listitem" class="things-list__item">Outdoor activites like hiking, biking, or simply taking a walk.</li>
+  
+    <li alt="listitem" class="things-list__item">Regular exercise and physical activity.</li>
+  
+    <li alt="listitem" class="things-list__item">Healthy eating habits</li>
+  
+    <li alt="listitem" class="things-list__item">Getting enough sleep.</li>
+  
+    <li alt="listitem" class="things-list__item">Meditation and mindfulness practices.</li>
+  
+    <li alt="listitem" class="things-list__item">“Relaxing activities like taking a bath.</li>
+  
+    <li alt="listitem" class="things-list__item">Reflecting on and appreciating the positive aspects of life.</li>
+  
+    <li alt="listitem" class="things-list__item">Keeping a gratitude journal.</li>
+  
+    <li alt="listitem" class="things-list__item">Acquiring new skills and knowledge.</li>
+  
+    <li alt="listitem" class="things-list__item">Personal development and self-improvement.</li>
+  
+    <li alt="listitem" class="things-list__item">Helping others and contributing to the community.</li>
+  
+    <li alt="listitem" class="things-list__item">Volunteering and philanthropy.</li>
+  
+    <li alt="listitem" class="things-list__item">Exploring new places and experiencing different cultures.</li>
+  
+    <li alt="listitem" class="things-list__item">Going on adventures and trying new things.</li>
+  
+    <li alt="listitem" class="things-list__item">Expressing myself through art, writing, or other creative outlets.</li>
+  
+    <li alt="listitem" class="things-list__item">Enjoying and appreciating various forms of art.</li>
+  
+    <li alt="listitem" class="things-list__item">Watching funny movies or shows.</li>
+  
+    <li alt="listitem" class="things-list__item">Sharing jokes and laughter with others.</li>
+  
+    <li alt="listitem" class="things-list__item">Listening to music that brings joy.</li>
+  
+    <li alt="listitem" class="things-list__item">Watching movies, shows, or attending live performances.</li>
+  
+    <li alt="listitem" class="things-list__item">Spending time with animals and pets.</li>
+  
+    <li alt="listitem" class="things-list__item">Building a connection with a furry friend.</li>
+  
+    <li alt="listitem" class="things-list__item">Positive thinking and cultivatin a positive mindset.</li>
+  
+    <li alt="listitem" class="things-list__item">Taking time for self-reflection.</li>
+  
+  <li alt="listitem" class="things-list__item">Balancing work and personal life.</li>
+  
+    <li alt="listitem" class="things-list__item">Finding a harmony between various aspects of life.</li>
+  
+    <li alt="listitem" class="things-list__item">Spending quality time with loved ones.</li>
+  
+    <li alt="listitem" class="things-list__item">Creating memorable experiences with friends and family.</li>
+  
+    <li alt="listitem" class="things-list__item">Celebrating achievements, both big and small.</li>
+  
+    <li alt="listitem" class="things-list__item">Acknowledging and rewarding myself for accomplishments.</li>
+  
+    <li alt="listitem" class="things-list__item">Being open to change and adaptation.</li>
+  
+    <li alt="listitem" class="things-list__item">Embracing new opportunities and experiences.</li>
+  
+    <li alt="listitem" class="things-list__item">Trying new foods and cuisines.</li>
+  
+    <li alt="listitem" class="things-list__item">Cooking or baking as a creative and enjoyable activity.</li>
+  
+    <li alt="listitem" class="things-list__item">Attending cultural events, museums, or art galleries.</li>
+  
+    <li alt="listitem" class="things-list__item">Exploring and learning about different cultures.</li>
+  
+    <li alt="listitem" class="things-list__item">Keeping up with favorite TV shows, movies, or books.</li>
+  
+    <li alt="listitem" class="things-list__item">Exploring and enjoying technological advancements.</li>
+  
+    <li alt="listitem" class="things-list__item">Engaging in acts of kindness and generosity.</li>
+  
+    <li alt="listitem" class="things-list__item">Contributing to charitable causes and making a positive impact.</li>
+  
+    <li alt="listitem" class="things-list__item">Taking calculated risks and stepping out of my comfort zone.</li>
+  
+    <li alt="listitem" class="things-list__item">Seeking adventure and excitement in life.</li>
+  
+    <li alt="listitem" class="things-list__item">Exploring and deepening spiritual beliefs.</li>
+  
+    <li alt="listitem" class="things-list__item">Finding inner peace through practices like meditation or prayer.</li>
+  
+    <li alt="listitem" class="things-list__item">Viewing challenges as opportunities for growth.</li>
+  
+    <li alt="listitem" class="things-list__item">Learning resilience and coping skills.</li>
+  
+    <li alt="listitem" class="things-list__item">Surrounding myself with positive and supportive people.</li>
+  
+    <li alt="listitem" class="things-list__item">Cultivating healthy and fulfilling relationships.</li>
+  
+    <li alt="listitem" class="things-list__item">Appreicating beauty in art, nature, and everyday life.</li>
+  
+    <li alt="listitem" class="things-list__item">Surrounding myself with aesthetically pleasing environments.</li>
+  
+    <li alt="listitem" class="things-list__item">Finding joy in simplicity and minimalistic living.</li>
+  
+    <li alt="listitem" class="things-list__item">Decluttering and organizing spaces.</li>
+    </ul>
+  </main>
+
+  <footer class="site-footer" alt="contentinfo">
+    <p>Compiled by <a href="https://www.instagram.com/__conniez/">Connie Zhang</a></p>
+  </footer>
 </body>
-  <grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
 </html>
+
+
+
