corrected the code

--- a/index.html
+++ b/index.html
@@ -1,45 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Why Life Is Beautiful</title>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width">
-  <meta name="description" content="A compilation of beautiful things in life for myself to look at when I'm feeling down.">
-  <meta name="robots" content="index, follow">
-
-  <link rel="icon" href="/assets/images/favicon-16.png" sizes="16x16" type="image/png">
-  <link rel="icon" href="/assets/images/favicon-32.png" sizes="32x32" type="image/png">
-  <link rel="icon" href="/assets/images/favicon-48.png" sizes="48x48" type="image/png">
-  <link rel="icon" href="/assets/images/favicon-62.png" sizes="62x62" type="image/png">
-  <link rel="icon" href="/assets/images/favicon-192.png" sizes="192x192" type="image/png">
-
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:creator" content="@soMelanieSaid">
-  <meta name="twitter:title" content="Good Things">
-  <meta name="twitter:description" content="A personal compilation of good sensory things in life.">
-  <meta name="twitter:image:src" content="https://goodthings.melanie-richards.com/assets/images/social-media-card.png">
-
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <title>Beautiful Things</title>
   <style>
     body {
       font-family: "Dancing Script", cursive;
-      background-color: #fdf5e6; 
-      color: #663399; 
+      background-color: #fdf5e6;
+      color: #663399;
       line-height: 1.6;
       margin: 0;
       padding: 0;
     }
 
     header.site-header {
-      background-color: #ffcccb; 
+      background-color: #ffcccb;
       padding: 20px;
       text-align: center;
     }
 
     h1.site-header__title {
       font-size: 2.5em;
-      color: #800080; 
+      color: #800080;
       margin-bottom: 10px;
     }
 
@@ -58,7 +40,7 @@
     }
 
     li.things-list__item {
-      background-color: #ffebcd; 
+      background-color: #ffebcd;
       margin: 10px 0;
       padding: 10px;
       border-radius: 5px;
@@ -78,9 +60,7 @@
       text-decoration: underline;
     }
   </style>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat&display=swap">
 </head>
-
 <body>
   <header class="site-header" alt="banner">
     <h1 class="site-header__title"><span class="site-header__good">Beautiful</span> Things</h1>
@@ -89,11 +69,9 @@
 
   <main alt="main">
     <ul alt="list" class="things-list">
-      <li alt="listitem" class="things-list__item">Sepnding time with family and friends.</li>
-  
-    <li alt="listitem" class="things-list__item">Building and maintaining meaningful connections.</li>
-  
-    <li alt="listitem" class="things-list__item">Romantic relationships.</li>
+      <li alt="listitem" class="things-list__item">Spending time with family and friends.</li>
+      <li alt="listitem" class="things-list__item">Building and maintaining meaningful connections.</li>
+        <li alt="listitem" class="things-list__item">Romantic relationships.</li>
   
     <li alt="listitem" class="things-list__item">Accomplishing goals, big or samll.</li>
   
@@ -218,6 +196,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
